# agent-lab

./: .env.sample  .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
agent-lab/: README.md
agent-lab/docs/: environment-setup-devcontainer.md  environment-setup-local-virtualenv.md  manual-deployment-in-azure-portal.md  understanding-the-use-case.md
agent-lab/notebooks/: 01_intro.ipynb  02_get_schedule.ipynb  03_get_schedule_tool.ipynb  04_get_menu_tool.ipynb  05_get_current_date_tool.ipynb  06_use_langchain.ipynb  07_order_tool.ipynb  08_final.ipynb  09_riceup_agent.ipynb  99-db_utility.ipynb  agent.py
agent-lab/notebooks/services/: data_provider.py  data_types.py
agent-lab/notebooks/services/data/: agent-lab.db  customers.json
agent-lab/notebooks/services/data/menu/: thursday.json
agent_lab/: Makefile  README.md  pyproject.toml
agent_lab/docs/: agent-introduction.md  setup-fork.md
agent_lab/notebooks/: 01_intro.ipynb  02_get_schedule.ipynb  03_get_schedule_tool.ipynb  04_get_menu_tool.ipynb  05_get_current_date_tool.ipynb  06_use_langchain.ipynb  07_order_tool.ipynb  08_final.ipynb  09_riceup_agent.ipynb  99-db_utility.ipynb  agent.py  agentold.py  initialize_rice_up_db.ipynb
agent_lab/notebooks/services/: data_provider.py  data_types.py
agent_lab/notebooks/services/data/: openinghours.json
agent_lab/notebooks/services/data/menu/: friday.json  saturday.json  sunday.json
agent_lab/notebooks/services/rice_up/: customers.json  openinghours.json
agent_lab/notebooks/services/rice_up/menu/: friday.json  monday.json  saturday.json  thursday.json  tuesday.json  wednesday.json
docs/: README.md  environment-setup-codespaces.md  environment-setup-local-virtualenv.md
